# rp2040-rmii

./: .gitmodules  CMakeLists.txt  README.md  hexdump.txt
examples/httpd/: CMakeLists.txt  main.c
src/: crc32.c  dma_accel.c  dma_accel.h  eth.c  eth.h  eth.pio  eth_lwip.c  main.c  smi.c  smi.h
src/include/: crc32.h  eth_lwip.h  hardware.h
src/lwip/: lwipopts.h
